Set title, clipboard options.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,13 +12,19 @@ set -g @tpm_plugins "              \
     tmux-plugins/tmux-pain-control \
     tmux-plugins/tmux-resurrect    \
     tmux-plugins/tmux-yank         \
-    caiogondim/maglev                \
+    caiogondim/maglev              \
 "
 # set -g @plugin 'jimeh/tmux-themepack'
 # set -g @themepack 'double/cyan'
 
 # initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
+
+set-option -g set-titles on
+set-option -g set-titles-string "#S / #W"
+
+set-clipboard on
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
 
 set-option -g prefix `
 set-option -g history-limit 3000
