Correct typos in font name and enable symbol_map, symbol_map, macos_hide_titlebar

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,20 +7,15 @@
 #: characters.
 
 font_family      PragmataPro Mono
-bold_font        PragmtaPro Mono Medium
-italic_font      PragmtaPro Mono Italic
-bold_italic_font PragmtaPro Mono Medium Italic
+bold_font        PragmataPro Mono Medium
+italic_font      PragmataPro Mono Italic
+bold_italic_font PragmataPro Mono Medium Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
 #: font system. Setting them manually is useful for font families that
 #: have many weight variants like Book, Medium, Thick, etc. For
 #: example::
-
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
 
 font_size 11.0
 
@@ -36,7 +31,7 @@ font_size 11.0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PragmataPro Mono
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -63,7 +58,7 @@ cursor  #81A1C1
 
 #: Default cursor color
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline)
 
@@ -327,38 +322,6 @@ selection_background  #55596d
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-;# black
-;color0:     #000000
-;color8:     #4D4D4D
-;
-;# red
-;color1:     #FF5555
-;color9:     #FF6E67
-;
-;# green
-;color2:     #50FA7B
-;color10:    #5AF78E
-;
-;# yellow
-;color3:     #f3f89d
-;color11:    #F4F99D
-;
-;# blue
-;color4:     #BD93F9
-;color12:    #CAA9FA
-;
-;# magenta
-;color5:     #FF79C6
-;color13:    #FF92D0
-;
-;# cyan
-;color6:     #8BE9FD
-;color14:    #9AEDFE
-;
-;# white
-;color7:     #BFBFBF
-;color15:    #E6E6E6
-
 color00: #282936
 color01: #3a3c4e
 color02: #626483
@@ -375,9 +338,6 @@ color12: #a1efe4
 color13: #62d6e8
 color14: #b45bcf
 color15: #00f769
-
-
-
 
 #: Advanced
 
@@ -415,7 +375,7 @@ color15: #00f769
 #: content of windows, etc. Note that this even works over ssh
 #: connections.
 
-startup_session none
+# startup_session none
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session command line option for
@@ -456,7 +416,7 @@ startup_session none
 #: you are probably better off just hiding the titlebar with
 #: macos_hide_titlebar.
 
-# macos_hide_titlebar no
+macos_hide_titlebar yes
 
 #: Hide the kitty window's title bar on macOS.
 
