--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      PragmataPro Mono
-bold_font        PragmataPro Mono Medium
+bold_font        PragmataPro Mono Bold
 italic_font      PragmataPro Mono Italic
-bold_italic_font PragmataPro Mono Medium Italic
+bold_italic_font PragmataPro Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -54,7 +54,7 @@ symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PragmataPro Mono
 
 #: Cursor customization
 
-cursor  #81A1C1
+cursor          #c7c7c7
 
 #: Default cursor color
 
@@ -94,8 +94,8 @@ cursor_shape block
 
 #: Mouse
 
-url_color  #0087BD
-url_style curly
+url_color       #0087BD
+url_style       curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
@@ -302,7 +302,8 @@ enable_audio_bell no
 #: Color scheme
 
 ## Nord theme - ported from https://github.com/arcticicestudio/nord-hyper
-foreground            #e9e9f4
+foreground            #feffff
+# background            #52535e
 background            #282936
 
 # background_opacity         1.0
@@ -322,22 +323,30 @@ selection_background  #55596d
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color00: #282936
-color01: #3a3c4e
-color02: #626483
-color03: #4d4f68
-color04: #62d6e8
-color05: #e9e9f4
-color06: #f1f2f8
-color07: #f7f7fb
-color08: #ea51b2
-color09: #b45bcf
-color10: #ebff87
-color11: #00f769
-color12: #a1efe4
-color13: #62d6e8
-color14: #b45bcf
-color15: #00f769
+# black
+color00: #282936   # ??
+color01: #585858
+# red
+color02: #AB4642
+color03: #AB4642
+# green
+color04: #A1B56C
+color05: #A1B56C
+# yellow
+color06: #F7CA88
+color07: #F7CA88
+# blue
+color08: #7CAFC2
+color09: #7CAFC2
+# magenta
+color10: #BA88AF
+color11: #BA88AF
+# cyan
+color12: #86c1b9
+color13: #86c1b9
+# white
+color14: #d8d8d
+color15: #f8f8f8
 
 #: Advanced
 
@@ -416,7 +425,7 @@ color15: #00f769
 #: you are probably better off just hiding the titlebar with
 #: macos_hide_titlebar.
 
-macos_hide_titlebar yes
+# macos_hide_titlebar yes
 
 #: Hide the kitty window's title bar on macOS.
 
