--- a/dotbot/osx.install.conf.yaml
+++ b/dotbot/osx.install.conf.yaml
@@ -14,5 +14,5 @@
   - 
     link: 
       ~/.skhdrc: "chunkwm/skhdrc"
-      ~/.chunkvmrc: "chunkwm/chunkwmrc"
+      ~/.chunkwmrc: "chunkwm/chunkwmrc"
 
