Updates to tmuxp sessions and moving projects to Projects dir.

--- a/tmuxp/cashbot.yaml
+++ b/tmuxp/cashbot.yaml
@@ -6,4 +6,4 @@ windows:
     automatic-rename: 'on'
   panes:
   - shell_command:
-    - cd /Users/steven.knight/src/cashbot
+    - cd /Users/steven.knight/Projects/cashbot
