--- a/tmuxp/dashbot.yaml
+++ b/tmuxp/dashbot.yaml
@@ -1,4 +1,5 @@
 session_name: dashbot
+start_directory: '~/Projects/dashbot'
 windows:
 - window_name: dashbot
   focus: 'true'
@@ -6,11 +7,4 @@ windows:
     automatic-rename: 'on'
   panes:
   - shell_command:
-    - cd /Users/steven.knight/src/dashbot
-- window_name: 'false'
-  focus: 'false'
-  options:
-    automatic-rename: 'on'
-  panes:
-  - shell_command:
-    - cd /Users/steven.knight/src/dashbot
+    - cd /Users/steven.knight/Projects/dashbot
