Add comment about how to install plugins.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,8 @@
 # https://github.com/tmux-plugins/tmux-resurrect
 # https://github.com/jimeh/tmux-themepack
 
+# To install plugins: prefix + I
+
 # Supports `github_username/repo` or full git URLs
 set -g @tpm_plugins "              \
     tmux-plugins/tpm               \
