--- a/dotbot/install.conf.yaml
+++ b/dotbot/install.conf.yaml
@@ -31,6 +31,7 @@
       ~/.zsh: "zsh"
       ~/.tmuxp: "tmuxp"
       ~/.vimrc: "vim/vimrc"
+      ~/.ideavimrc: "vim/ideavimrc"
       ~/.inputrc: "dotfiles/inputrc"
       ~/.rvmrc: "dotfiles/rvmrc"
       ~/.tmux.conf: "tmux/tmux.conf"
