--- a/dotbot/install.conf.yaml
+++ b/dotbot/install.conf.yaml
@@ -37,6 +37,7 @@
       ~/.tmux.conf: "tmux/tmux.conf"
       ~/.Xresources: "dotfiles/Xresources"
       ~/.zlogin: "zsh/zlogin.zsh"
+      ~/.zsh_plugins.txt: "zsh/zsh_plugins.txt"
       ~/.zlogout: "zsh/zlogout.zsh"
       ~/.zprofile: "zsh/zprofile.zsh"
       ~/.zshenv: "zsh/zshenv.zsh"
